css/style.css
/* ... */
      /*==news date==*/
      .news__date {
        position: absolute;
        background-color: #d16a6a;
        color: white;
        padding: 0.3rem 0.6rem;
        text-align: center;
      }
      .date__day {
        font-size: 20px;
        font-weight: bold;
        display: block;
        margin: auto;
      }
      .date__month {
        font-size: 8px;
        margin: 0 auto;
      }
      /*==news picture==*/
      .news__picture {
        width: 30rem;
        height: 18rem;
      }
      /*==news title==*/
      .news__info {
        background-color: #19B2DE;
        color: white;
        text-align: left;
        position: absolute;
        bottom: 0;
        left: 0;
        padding: 1px;
        width: 100%;
        height: 20%;
        display: flex;
        flex-direction: column;
      }
      .news__heading {
        font-size: 16px;
        font-weight: bold;
        margin: 5px 10px 0;
      }
      .news__subheading {
        font-size: 11px;
        margin: 0 10px 10px;
      }

      .news__icon {
        position: absolute;
        right: 1rem;
        width: 2rem;
        top: 0.7rem;
        height: 2rem;
        background-color: #007bbf;
        border-radius: 2px;
      }
    /*==Gallery images==*/
      .gallery__image {
        margin: 5px;
        width: 24rem;
        height: 16rem;
        align-self: center;
      }
/*====================
Sandy's footer section
======================*/

/*=================================
General footer style
=================================*/

footer{
  background-color: #0E2E4E;
  color:#fff;
  padding:4px 0;
  width: 100%;
  position: absolute;
  left: 0;
}

.director__image{
  width: 10.64794rem;
  height: 9.20781rem;
  flex-shrink: 0;
  border-radius: 100%;
}
.director {
  width: fit-content;
  margin: 0 auto;
}

.profile__line{
  width: 15rem;
  height: 0.3rem;
  background-color: #FFB901;
  margin-bottom: 4rem;
  margin-top: 10px auto 0;
  margin-left: 26%;
}

.reviews__heading{
  color:#19B2DE;
  border-bottom: 1px solid #FFB901;
  display:inline-block;
}

.about__heading{
  color: #FFB901;
  border-bottom: 1px solid #21c183;
}

.instagram__heading{
  color:  #DE6262;
  border-bottom: 1px solid #19B2DE;
}

.track__heading{
  border-bottom: 1px solid #19B2DE;
}

    .user{
      color: #1BADE6;
      text-align: justify;
      font-family:'Open Sans', sans-serif;
      font-style: normal;
      font-weight: 700;
    }

.track__square{
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 1rem;
}

.track__square--purple{
  background-color:#527CC4;
  width: 32px;
  height: 32px;
  border-radius: 5%;
  gap: 0.44rem;
}

.track__square--red{
  background-color:#E46145;
  width: 32px;
  height: 32px;
  border-radius: 5%;
  gap: 0.44rem;
}

.track__square--blue{
  background-color:#00B0E2;
  width: 32px;
  height: 32px;
  border-radius: 5%;
  gap: 0.44rem;
}

.track__square--pink{
  background-color:#F6679C;
  width: 32px;
  height: 32px;
  border-radius: 5%;
  gap: 0.44rem;
}

.track__square--yellow{
  background-color:#FFB901;
  width: 32px;
  height: 32px;
  border-radius: 5%;
  gap: 0.44rem;
}

.email_button{
  width: 143px;
  display: flex;
  height: 2rem;
}

.track__email{
  background-color:#DE6262;
  color:white;
  width: 9rem;
  height:auto;
  margin-right: 0;
  flex-shrink: 0;
  padding:0;
  border: none;
}

button{
  background-color:#FFB901;; 
  width: 3rem;
  flex-shrink: 0;
  margin:0;
  position: relative;
  border: none;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;

}

::placeholder{
  color: white;
  padding-left: 5px;
}

input{
  border-radius: 5px 0 0 5px;
}

.colors{
  display: flex;
  align-items: flex-start;
  margin-bottom:0;
}
/* ... */

